errors
mainwindow.cpp:42:62: error: request for member ‘label_cam0’ in ‘((MainWindow*)this)->MainWindow::ui’, which is of pointer type ‘Ui::MainWindow*’ (maybe you meant to use ‘->’ ?)
   42 |         QPixmap pixmap = QPixmap::fromImage(image).scaled(ui.label_cam0->size(), Qt::KeepAspectRatio);
      |                                                              ^~~~~~~~~~
mainwindow.cpp:45:25: error: ‘class Ui::MainWindow’ has no member named ‘label_cam0’
   45 |             case 0: ui->label_cam0->setPixmap(pixmap); break;
      |                         ^~~~~~~~~~
mainwindow.cpp:46:25: error: ‘class Ui::MainWindow’ has no member named ‘label_cam1’
   46 |             case 1: ui->label_cam1->setPixmap(pixmap); break;
      |                         ^~~~~~~~~~
mainwindow.cpp:47:25: error: ‘class Ui::MainWindow’ has no member named ‘label_cam2’
   47 |             case 2: ui->label_cam2->setPixmap(pixmap); break;
      |                         ^~~~~~~~~~
mainwindow.cpp:48:25: error: ‘class Ui::MainWindow’ has no member named ‘label_cam3’
   48 |             case 3: ui->label_cam3->setPixmap(pixmap); break;
      |                         ^~~~~~~~~~
make: *** [makefile:37: mainwindow.o] Error 1
